# resources/views/dashboard.blade.php
@@ -80,6 +80,15 @@
                 </div>
             </div>
         </div>
+        <div class='col-3 p-3'>
+            <div class='card'>
+                <div class='card-body'>
+                    <a href="{{route('first_aid.index')}}">
+                        <h4>FirstAid</h4>
+                    </a>
+                </div>
+            </div>
+        </div>
         <!-- ADD_ITEM -->
 @endsection
 @section('script')
