# resources/views/first_aid/first_aid.blade.php
@@ -1,0 +1,73 @@
+@extends('layouts.simple.master')
+@section('title', 'Programmer UZ')
+
+
+@section('style')
+@endsection
+
+@section('breadcrumb-title')
+    <h3>FirstAid</h3>
+@endsection
+
+@section('breadcrumb-items')
+    <div class="py-3">
+        <div class="justify-content-between row mx-2">
+            <a  href="{{route('first_aid.create')}}" class="btn btn-success font-weight-bold"><i class="fa fa-plus"></i></a>
+        </div>
+    </div>
+@endsection
+
+@section('content')
+    @if(session()->has('message'))
+        <div class="alert {{session('error') ? 'alert-danger' : 'alert-success'}}">
+            {{ session('message') }}
+        </div>
+    @endif
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-sm-12">
+                <div class="card">
+                    <div class="card-header">
+                        <h5>FirstAid</h5>
+                    </div>
+                    <div class="table-responsive">
+                        <table class="table table-hover">
+                            <thead>
+                            <tr>
+                                <th scope="col">#</th>
+								<th scope='col'>Case</th>
+								<th scope='col'>Photo</th>
+								<th scope='col'>Treatment</th>
+								<th scope='col'>Created At</th>
+								<th scope="col">Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            @foreach($models as $model)
+                            <tr>
+                                <td>{{$model->id}}</td>
+								<td>{{$model->case}}</td>
+								<td><img src='{{$model->photo}}' width='100' alt=''></td>
+								<td>{{$model->treatment}}</td>
+								<td>{{$model->created_at}}</td>
+                                <td>
+                                    <div class="btn-group">
+                                        <a href="{{route('first_aid.edit', ['first_aid' => $model->id])}}" class="btn btn-info"><i class="fa fa-edit"></i></a>
+                                        <a href="{{route('first_aid.show', ['first_aid' => $model->id])}}" class="btn btn-danger"><i class="fa fa-trash"></i></a>
+                                    </div>
+                                </td>
+                            </tr>
+                            @endforeach
+                            </tbody>
+                        </table>
+                        <div class="d-flex justify-content-center">
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+@endsection
+
+@section('script')
+@endsection
