# resources/views/layouts/simple/sidebar.blade.php
@@ -113,6 +113,19 @@
                                 </g>
                             </svg><span>Symptom</span></a>
                     </li>
+                    <li class='sidebar-list'>
+                        <label class='badge badge-light-info'></label><a class='sidebar-link sidebar-title' href='{{route('first_aid.index')}}'>
+                            <svg width='24' height='24' viewBox='0 0 24 24' fill='none' xmlns='http://www.w3.org/2000/svg'>
+                                <g>
+                                    <g>
+                                        <path d='M14.3053 15.45H8.90527' stroke='#130F26' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'></path>
+                                        <path d='M12.2604 11.4387H8.90442' stroke='#130F26' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'></path>
+                                        <path fill-rule='evenodd' clip-rule='evenodd' d='M20.1598 8.3L14.4898 2.9C13.7598 2.8 12.9398 2.75 12.0398 2.75C5.74978 2.75 3.64978 5.07 3.64978 12C3.64978 18.94 5.74978 21.25 12.0398 21.25C18.3398 21.25 20.4398 18.94 20.4398 12C20.4398 10.58 20.3498 9.35 20.1598 8.3Z' stroke='#130F26' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'></path>
+                                        <path d='M13.9342 2.83276V5.49376C13.9342 7.35176 15.4402 8.85676 17.2982 8.85676H20.2492' stroke='#130F26' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round'></path>
+                                    </g>
+                                </g>
+                            </svg><span>FirstAid</span></a>
+                    </li>
                     <!-- ADD_ITEM -->
                 </ul>
             </div>
