# storage/api-docs/api-docs.json
@@ -1173,6 +1173,283 @@
                 ]
             }
         },
+        "/api/v1/first_aid": {
+            "get": {
+                "tags": [
+                    "FirstAid API CRUD"
+                ],
+                "summary": "Get all FirstAids",
+                "description": "Retrieve all FirstAids",
+                "operationId": "first_aid_index",
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FirstAid"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "FirstAid API CRUD"
+                ],
+                "summary": "Create a new FirstAid",
+                "description": "Add a new FirstAid",
+                "operationId": "first_aid_store",
+                "requestBody": {
+                    "description": "FirstAid save",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "case",
+                                    "photo",
+                                    "treatment"
+                                ],
+                                "properties": {
+                                    "case": {
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "photo": {
+                                        "type": "file",
+                                        "example": ""
+                                    },
+                                    "treatment": {
+                                        "type": "string",
+                                        "example": ""
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FirstAid"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api": []
+                    }
+                ]
+            }
+        },
+        "/api/v1/first_aid/{id}": {
+            "get": {
+                "tags": [
+                    "FirstAid API CRUD"
+                ],
+                "summary": "Get a single FirstAid by ID",
+                "description": "Retrieve a single FirstAid by its ID",
+                "operationId": "first_aid_show",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the FirstAid to retrieve",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FirstAid"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api": []
+                    }
+                ]
+            },
+            "post": {
+                "tags": [
+                    "FirstAid API CRUD"
+                ],
+                "summary": "Update a FirstAid by ID",
+                "description": "Update a specific FirstAid by its ID",
+                "operationId": "first_aid_update",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the FirstAid to update",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "requestBody": {
+                    "description": "FirstAid save",
+                    "required": true,
+                    "content": {
+                        "multipart/form-data": {
+                            "schema": {
+                                "required": [
+                                    "case",
+                                    "photo",
+                                    "treatment"
+                                ],
+                                "properties": {
+                                    "case": {
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "photo": {
+                                        "type": "file",
+                                        "example": ""
+                                    },
+                                    "treatment": {
+                                        "type": "string",
+                                        "example": ""
+                                    },
+                                    "_method": {
+                                        "description": "Read-only: This property cannot be modified.",
+                                        "type": "string",
+                                        "example": "PUT"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FirstAid"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api": []
+                    }
+                ]
+            },
+            "delete": {
+                "tags": [
+                    "FirstAid API CRUD"
+                ],
+                "summary": "Delete a FirstAid by ID",
+                "description": "Remove a specific FirstAid by its ID",
+                "operationId": "first_aid_delete",
+                "parameters": [
+                    {
+                        "name": "id",
+                        "in": "path",
+                        "description": "ID of the FirstAid to delete",
+                        "required": true,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Successful operation",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/FirstAid"
+                                }
+                            }
+                        }
+                    },
+                    "404": {
+                        "description": "Not found",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/Error"
+                                }
+                            }
+                        }
+                    }
+                },
+                "security": [
+                    {
+                        "api": []
+                    }
+                ]
+            }
+        },
         "/api/v1/patient": {
             "get": {
                 "tags": [
@@ -2166,6 +2443,52 @@
                                     "type": "string"
                                 },
                                 "residency": {
+                                    "type": "string"
+                                },
+                                "created_at": {
+                                    "type": "string",
+                                    "format": "date-time"
+                                },
+                                "updated_at": {
+                                    "type": "string",
+                                    "format": "date-time"
+                                }
+                            },
+                            "type": "object"
+                        }
+                    },
+                    "code": {
+                        "type": "integer",
+                        "example": 200
+                    }
+                },
+                "type": "object"
+            },
+            "FirstAid": {
+                "title": "FirstAid title",
+                "properties": {
+                    "success": {
+                        "type": "boolean",
+                        "example": true
+                    },
+                    "message": {
+                        "type": "string",
+                        "example": "Successfully"
+                    },
+                    "data": {
+                        "type": "array",
+                        "items": {
+                            "properties": {
+                                "id": {
+                                    "type": "integer"
+                                },
+                                "case": {
+                                    "type": "string"
+                                },
+                                "photo": {
+                                    "type": "file"
+                                },
+                                "treatment": {
                                     "type": "string"
                                 },
                                 "created_at": {
